# microservices/product-api/handlers/get.go
@@ -26,7 +26,7 @@ func (p *Products) GetProducts(rw http.ResponseWriter, r *http.Request) {
 	}
 }
 
-// swagger:route GET /products/{id} products listSingle
+// swagger:route GET /products/{id} products listSingleProduct
 //  Returns a  product
 //
 // responses:
