# microservices/product-api/swagger.yaml
@@ -10,9 +10,7 @@ definitions:
     type: object
     x-go-package: github.com/eanson023/golearning/microservices/product-api/handlers
   Product:
-    description: |-
-      Product defines the structure for an API product
-      swaggger:model
+    description: Product defines the structure for an API product
     properties:
       description:
         description: the description for this poduct
@@ -58,9 +56,7 @@ definitions:
     type: object
     x-go-package: github.com/eanson023/golearning/microservices/product-api/handlers
 info:
-  description: |-
-    Documentation for Product API
-    Schema: http
+  description: Documentation for Product API
   title: classification of Product API
   version: 1.0.0
 paths:
@@ -101,7 +97,7 @@ paths:
     delete:
       operationId: deleteProduct
       parameters:
-      - description: The id of the product to delete from database
+      - description: The id of the product for which the operation relates
         format: int64
         in: path
         name: id
@@ -119,7 +115,15 @@ paths:
       - products
     get:
       description: Returns a  product
-      operationId: listSingle
+      operationId: listSingleProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
       responses:
         "200":
           $ref: '#/responses/productsResponse'
@@ -148,4 +152,6 @@ responses:
       items:
         $ref: '#/definitions/Product'
       type: array
+schemes:
+- http
 swagger: "2.0"
